--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/webapplicatie_drovn_bank?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=Hallotest5@
-spring.jpa.hibernate.ddl-auto=update
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+spring.datasource.username=userWebApplicatie_DROVN_Bank
+spring.datasource.password=pwWebApplicatie_DROVN_Bank
+#spring.jpa.hibernate.ddl-auto=update
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
