--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/webapplicatie_drovn_bank?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=userWebApplicatie_DROVN_Bank
-spring.datasource.password=pwWebApplicatie_DROVN_Bank
+spring.datasource.username=thieh
+spring.datasource.password=docent
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 logging.level.nl.hva.miw.internetbanking=INFO
