bug EmptyResultDataAccessException gefixt en e.e.a opgeruimd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=pwWebApplicatie_DROVN_Bank
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 logging.level.nl.hva.miw.internetbanking=INFO
+logging.level.root=ERROR
