hij haalt nu particuliere accounts op

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
-#logging.level.root=ERROR
+logging.level.root=ERROR
