--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
-logging.level.root=ERROR
+#logging.level.root=ERROR
