--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/drovn?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=cursist
-spring.datasource.password=cohort
+spring.datasource.username=thieh
+spring.datasource.password=docent
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
 
