--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/drovn-test?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
