--- a/src/test/resources/application-test-h2.properties
+++ b/src/test/resources/application-test-h2.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
+spring.datasource.url=jdbc:h2:mem:drovn-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
